tests/fixtures/components/invalid-pure/csrf.blade.php
@pure

<form method="POST">
    @csrf
    {{ $slot }}
</form>
